--- a/seahub/help/templates/help/base.html
+++ b/seahub/help/templates/help/base.html
@@ -51,7 +51,7 @@
 
             <h3 class="hd">{% trans "Wiki and knowledge management" %}</h3>
             <ul class="side-textnav-tabs">
-                <li class="tab"><a href="{{ SITE_ROOT }}help/manage_library_as_wiki/">{% trans "Manage library as Wiki" %}</a></li>
+                <li class="tab"><a href="{{ SITE_ROOT }}help/manage_library_as_wiki/">{% trans "Managing a library as Wiki" %}</a></li>
             </ul>
             
             <h3 class="hd">{% trans "Desktop client and syncing" %}</h3>
