--- a/seahub/help/templates/help/full_text_file_search.html
+++ b/seahub/help/templates/help/full_text_file_search.html
@@ -3,7 +3,7 @@
 
 {% block help_con %}
 <h3 class="hd">{% trans "Full text file search" %}</h3>
-<p>{% trans "If you're using a Pro Edition Server, you can search file and folder names, as well as the content of certains files, in the Seafile web app. Currently Seafile can search the contents of the following file types:" %}</p>
+<p>{% trans "If you're using a Pro Edition Server, you can search file and folder names, as well as the content of certain files, in the Seafile web app. Currently Seafile can search the contents of the following types of files:" %}</p>
 <ul>
   <li>{% trans "Microsoft Office Doc: .doc, .docx (Pro Edition Server only)" %}</li>
   <li>{% trans "Microsoft Office PowerPoint: .ppt, .pptx (Pro Edition Server only)" %}</li>
