--- a/seahub/help/templates/help/folder_permission.html
+++ b/seahub/help/templates/help/folder_permission.html
@@ -24,10 +24,10 @@
 <p>{% blocktrans %}If a "read only" folder is synced to PC with the Seafile desktop App, changes under a "read only" folder won't be uploaded to the cloud.{% endblocktrans %}</p>
 <h4>{% trans "Advanced: priority between different permissions" %}</h4>
 <ul>
-  <li>{% blocktrans %}Folder permissions have higher priority than the permission set in share. For example, if you shared a library to user A with "read write" permission, and also set "read only" permission to a sub-folder of that library. Then user A only has "read only" access to the sub-folder, while he/she has "read write" access to all other sub-folders and files.{% endblocktrans %}</li>
-  <li>{% trans "Folder permissions set to specific user have higher priority than permissions set to a group. That is, when checking permission for a folder, if the system matches a permission specific to the user, it'll ignore all permissions set for the groups the user belongs to." %}</li>
+  <li>{% blocktrans %}Folder permissions have higher priority than the permission set in share. For example, if you share a library to user A with "read write" permission, and also set "read only" permission to a sub-folder of that library. Then user A only has "read only" access to the sub-folder, while he/she has "read write" access to all other sub-folders and files.{% endblocktrans %}</li>
+  <li>{% trans "Folder permissions set to a specific user have higher priority than permissions set to a group. That is, when checking permission for a folder, if the system matches a permission specific to the user, it'll ignore all permissions set for the groups the user belongs to." %}</li>
   <li>{% trans "Permissions on sub-folders have higher priority than those on parent folders." %}</li>
 </ul>
 <p>{% trans "Here is a more complex example:" %}</p>
-<p>{% blocktrans %}Supposed the folder structure looks like "A/B", User "John" is in group "Staff". If you set "read only" permission on folder A for John, and, you also set "read write" permission on folder "A/B" for group "Staff". Then John's permission to folder "A/B" is still only "read only". That's because, according to rule 2, "read only" permission is first matched for folder "A/B" and user "John", which is inherited from it's parent "A".{% endblocktrans %}</p>
+<p>{% blocktrans %}Supposed the folder structure looks like "A/B", user "John" is in group "Staff". If you set "read only" permission on folder A for John, and, you also set "read write" permission on folder "A/B" for group "Staff". Then John's permission to folder "A/B" is still only "read only". That's because, according to rule 2, "read only" permission is first matched for folder "A/B" and user "John", which is inherited from its parent "A".{% endblocktrans %}</p>
 {% endblock %}
