--- a/seahub/help/templates/help/restoring_deleted_files.html
+++ b/seahub/help/templates/help/restoring_deleted_files.html
@@ -4,7 +4,7 @@
 {% block help_con %}
 
 <h3 class="hd">{% trans "Restoring deleted files and folders" %}</h3>
-<p>{% trans "Each library in Seafile tracks your file deletion operations automatically. Sometimes you find files are deleted mistakenly. You can find back your delete files in the trash bin of each library." %}</p>
+<p>{% trans "Each library in Seafile tracks your file deletion operations automatically. Sometimes you find files are deleted mistakenly. You can find back your deleted files in the trash bin of each library." %}</p>
 <p>{% trans "Here is how to use the trash bin feature:" %}</p>
 <ul>
   <li>{% trans "In Seafile Web App, navigate into the parent folder containing the deleted file or folder." %}</li>
@@ -12,6 +12,6 @@
   <li>{% trans "In the deleted files list, you can restore file and folders. If a file or folder's parent folder has been deleted, it will be restored to the library's root folder." %}</li>
   <li>{% trans "Note that the trash bin only contains files and sub-folders deleted under the current folder. Files deleted in the sub-folders of the current folder are also included in the list." %}</li>
 </ul>
-<p>{% blocktrans %}You can configure the retention period of delete files: <a href="{{ SITE_ROOT }}help/setting_library_history/">setting history retention period</a>.{% endblocktrans %}</p>
+<p>{% blocktrans %}You can configure the retention period of deleted files: <a href="{{ SITE_ROOT }}help/setting_library_history/">setting history retention period</a>.{% endblocktrans %}</p>
 
 {% endblock %}
