[l10n] updated .po files

--- a/seahub/help/templates/help/drive_client_2.0_for_windows_10.html
+++ b/seahub/help/templates/help/drive_client_2.0_for_windows_10.html
@@ -39,7 +39,7 @@
 <p>{% blocktrans %}Yes. But files created outside of a library folder will be ignored and NOT synced to the server. A new folder under the "My Libraries" folder will be handled as a new library.{% endblocktrans %}</p>
 
 <p><b>{% trans "Can I access encrypted libraries?" %}</b></p>
-<p>{% blocktrans %}Yes. By default, encrypted libraries are not synced and shown in the virtual drive. You need to manually choose which encrypted libraries to sync and enter the password. Just right click on the SeaDrive icon in the system tray area and choose "Show encrypted libraries". A windows will show up and you can choose to sync or unsync an encrypted library.{% endblocktrans %}</p>
+<p>{% blocktrans %}Yes. By default, encrypted libraries are not synced and shown in the virtual drive. You need to manually choose which encrypted libraries to sync and enter the password. Just right click on the SeaDrive icon in the system tray area and choose "Show encrypted libraries". A window will show up and you can choose to sync or unsync an encrypted library.{% endblocktrans %}</p>
 
 <p><b>{% trans "Is it compatible to SeaDrive 1.0?" %}</b></p>
 <p>{% blocktrans %}SeaDrive 2.0 will use any existing accounts and their metadata (stored under C:\users\username\seadrive\ folder). But it will not use the cached files from SeaDrive 1.0. So any locally cached files in 1.0 version will not be accessible in 2.0 version. You can start SeaDrive 1.0 again to upload the files to server or copy them out.{% endblocktrans %}</p>
