--- a/seahub/help/templates/help/groups_managing.html
+++ b/seahub/help/templates/help/groups_managing.html
@@ -10,7 +10,7 @@
   <li>{% trans "Each group can have multiple admins. The group owner and group admins can add more group admins." %}</li>
   <li>{% trans "The group admin can add/delete members in the group. And he/she can also unshare a library in the group." %}</li>
 </ul>
-<p>{% blocktrans %}Click on the "Groups" tab on the left panel, and you'll see all the groups you're in. Clicking into any group, you'll see the libraries shared into this group.{% endblocktrans %}</p>
-<p>{% blocktrans %}To create a new group, click on the "Groups" tab on the left panel. Then click on "All Groups". In the all groups page, you can click "New Group" button to create a group.{% endblocktrans %}</p>
+<p>{% blocktrans %}Click on the "Shared with groups" tab on the left panel, and you'll see all the groups you're in. Clicking into any group, you'll see the libraries shared into this group.{% endblocktrans %}</p>
+<p>{% blocktrans %}To create a new group, click on the "Shared with groups" tab on the left panel. Then click on "All Groups". In the page, you can click the "New Group" button to create a group.{% endblocktrans %}</p>
 <p>{% blocktrans %}See <a href="{{ SITE_ROOT }}help/sharing_files_and_folders/">sharing files and folders</a> about how to share libraries or folders to a group.{% endblocktrans %}</p>
 {% endblock %}
