[help] side nav: improvement

--- a/seahub/help/templates/help/base.html
+++ b/seahub/help/templates/help/base.html
@@ -15,7 +15,7 @@
 {% block main_class %}d-flex ovhd{% endblock %}
 {% block main_content %}
 <div class="row flex-1 d-flex">
-    <div class="side-textnav col-md-3 side-nav">
+    <div class="side-textnav col-md-3 side-nav help-side-nav">
         <div class="hidden-md-up logo-container">
             <a href="{{ SITE_ROOT }}">
                 <img src="{{ MEDIA_URL }}{{ logo_path }}" title="{{ site_title }}" alt="logo" width="{{logo_width}}" height="{{logo_height}}" />
@@ -84,14 +84,37 @@
 {% endblock %}
 {% block extra_script %}
 <script type="text/javascript">
-$('.side-nav li').each(function() {
-    var link_href = $('a', $(this)).attr('href');
-    if (link_href == location.pathname || link_href == location.pathname + 'introduction/') {
-        $(this).addClass('tab-cur');
-        if ($(this).offset().top > $(window).height()) {
-            $('.side-nav').scrollTop($(this).offset().top + $(this).outerHeight(true) - $(window).height());
+$('.side-nav li').each(function(index) {
+    var $link = $('a', $(this));
+    var link_href = $link.attr('href');
+    $link.attr('data-index', index);
+    if (link_href == location.pathname ||
+      link_href == location.pathname + 'introduction/') {
+      $(this).addClass('tab-cur');
+      if ($(this).offset().top > $(window).height()) {
+        var preSavedScrollTop;
+        try {
+          preSavedScrollTop = localStorage.getItem('help-nav-item-' + index);
+        } catch (e) {
+          // do nothing
         }
+        if (preSavedScrollTop) {
+          $('.side-nav').scrollTop(preSavedScrollTop);
+        } else {
+          $('.side-nav').scrollTop($(this).offset().top + $(this).outerHeight(true) - $(window).height() + 50);
+        }
+      }
     }
+});
+$('.help-side-nav .tab a').on('click', function() {
+  var scrollTop = $('.side-nav').scrollTop();
+  if (scrollTop > 0) {
+    try {
+      localStorage.setItem('help-nav-item-' + $(this).attr('data-index'), scrollTop);
+    } catch (e) {
+      // do nothing
+    }
+  }
 });
 </script>
 {% endblock %}
