--- a/seahub/templates/base_for_react.html
+++ b/seahub/templates/base_for_react.html
@@ -39,6 +39,7 @@
             siteName: '{{ site_name|escapejs }}',
             siteRoot: '{{ SITE_ROOT }}',
             loginUrl: '{{ LOGIN_URL }}',
+            logoutUrl: '{{ LOGOUT_URL }}',
             isPro: '{{ is_pro }}',
             isDocs: '{{ is_docs }}',
             lang: '{{ LANGUAGE_CODE }}',
