--- a/frontend/src/css/wiki.css
+++ b/frontend/src/css/wiki.css
@@ -56,6 +56,7 @@ img[src=""] {
   display:flex;
   flex-direction:column;
   overflow:hidden;
+  z-index: 1051; /* for mobile */
 }
 
 .wiki-main-panel {
