--- a/seahub/templates/view_file_onlyoffice.html
+++ b/seahub/templates/view_file_onlyoffice.html
@@ -53,6 +53,67 @@ html, body { padding:0; margin:0; height:100%; }
     };
     var docEditor = new DocsAPI.DocEditor("placeholder", config);
 </script>
-{% include 'snippets/wopi_onlyoffice_js.html' %}
+<script type="text/javascript">
+    var SEAFILE_GLOBAL = {
+        csrfCookieName: '{{ CSRF_COOKIE_NAME }}'
+    };
+
+    {% if can_edit %}
+    var interval;
+    {% if not share_link_token %}
+    var refreshLock = function() {
+        $.ajax({
+            url: '{% url "api-v2.1-file-view" repo_id %}' + '?p={{path|urlencode}}',
+            type: 'PUT',
+            dataType: 'json',
+            data: {
+                'operation': 'refresh-lock',
+                'expire': 2400
+            },
+            cache: false,
+            beforeSend: prepareCSRFToken,
+            success: function(data) {
+            },
+            error: function(xhr) {
+                if (xhr.responseText) {
+                    feedback(JSON.parse(xhr.responseText).error_msg, 'error');
+                } else {
+                    feedback("{% trans "Failed. Please check the network." %}", 'error');
+                }
+                clearInterval(interval);
+            }
+        });
+    };
+    {% else %}
+    var refreshLock = function() {
+        $.ajax({
+            url: '{% url "api-v2.1-share-link-online-office-lock" share_link_token %}',
+            type: 'PUT',
+            dataType: 'json',
+            data: {
+                'expire': 2400
+            },
+            cache: false,
+            beforeSend: prepareCSRFToken,
+            success: function(data) {
+            },
+            error: function(xhr) {
+                if (xhr.responseText) {
+                    feedback(JSON.parse(xhr.responseText).error_msg, 'error');
+                } else {
+                    feedback("{% trans "Failed. Please check the network." %}", 'error');
+                }
+                clearInterval(interval);
+            }
+        });
+    };
+    {% endif %}
+    interval = setInterval(refreshLock, 40 * 60 * 1000);
+    {% endif %}
+</script>
+{% if enable_watermark %}
+<script type="text/javascript" src="{{ MEDIA_URL }}js/watermark.js"></script>
+<script type="text/javascript">{% include "snippets/add_watermark.html" %}</script>
+{% endif %}
 </body>
 </html>
