--- a/frontend/src/css/file-view.css
+++ b/frontend/src/css/file-view.css
@@ -40,6 +40,27 @@ body {
 .tip {
   color: #808080;
 }
+
+.file-details-container {
+  position: absolute;
+  right: 0;
+  background-color: #fff;
+  width: 300px;
+  height: 100%;
+  box-shadow: -1px 0 3px 0 #ccc;
+  animation: move .5s ease-in-out 1;
+  z-index: 50;
+}
+@keyframes move {
+  from {
+    right: -500px;
+    opacity: 0.5;
+  }
+  to {
+    right: 0px;
+    opacity: 1;
+  }
+}
 /* for mobile */
 .file-view-body .seafile-comment {
   width: 100%;
