repair share dir upload bug

--- a/seahub/templates/view_shared_dir_react.html
+++ b/seahub/templates/view_shared_dir_react.html
@@ -20,6 +20,7 @@
     window.shared = {
         pageOptions: {
             dirName: '{{ dir_name|escapejs }}',
+            dirPath: '{{ dir_path|escapejs }}',
             sharedBy: '{{ username|email2nickname|escapejs }}',
             repoID: '{{repo.id}}',
             path: '{{ path|escapejs }}',
