--- a/seahub/templates/markdown_file_view_react.html
+++ b/seahub/templates/markdown_file_view_react.html
@@ -56,6 +56,7 @@
                   isLocked: {% if file_locked %}true{% else %}false{% endif %},
                   lockedByMe: {% if locked_by_me %}true{% else %}false{% endif %},
                   canLockUnlockFile: {% if can_lock_unlock_file %}true{% else %}false{% endif %},
+                  canDownloadFile: {% if can_download_file %}true{% else %}false{% endif %},
               },
              userInfo: {
                username: '{{ user.username }}',
