update watermark logig when view file via wopi

--- a/seahub/templates/view_file_wopi.html
+++ b/seahub/templates/view_file_wopi.html
@@ -45,7 +45,9 @@
     document.getElementById('office_form').submit();
     document.getElementById('office_frame').className = '';
 </script>
+{% if enable_watermark %}
 <script type="text/javascript" src="{{ MEDIA_URL }}js/watermark.js"></script>
 <script type="text/javascript">{% include "snippets/add_watermark.html" %}</script>
+{% endif %}
 </body>
 </html>
