[video thumbnail] display the thumbnails for some pages.
- when 'video thumbnail' feature is enabled, display the thumbnails
  for 'dir view', 'starred(favorites)', 'file view', 'shared dir view'
  pages.

--- a/seahub/templates/base_for_react.html
+++ b/seahub/templates/base_for_react.html
@@ -129,6 +129,7 @@
             curNoteID: '{{ request.cur_note.id }}',
             {% endif %}
             enableTC: {% if enable_terms_and_conditions %} true {% else %} false {% endif %},
+            enableVideoThumbnail: {% if enable_video_thumbnail %} true {% else %} false {% endif %},
             showLogoutIcon: {% if show_logout_icon %} true {% else %} false {% endif %},
             additionalShareDialogNote: {% if additional_share_dialog_note %} {{ additional_share_dialog_note|safe }} {% else %} null {% endif %},
             additionalAppBottomLinks: {% if additional_app_bottom_links %} {{ additional_app_bottom_links|safe }} {% else %} null {% endif %},
