--- a/seahub/templates/common_file_view_react.html
+++ b/seahub/templates/common_file_view_react.html
@@ -17,6 +17,11 @@ nextImage: {% if img_next %}'{{ img_next|escapejs }}'{% else %}false{% endif %},
 fileExt: '{{ fileext|escapejs }}',
 thumbnailSizeForOriginal: {{ thumbnail_size_for_original }},
 {% endif %}
+
+{% if filetype == 'Video' %}
+enableVideoThumbnail: {% if enable_video_thumbnail %} true {% else %} false {% endif %},
+{% endif %}
+
 {% if filetype == 'XMind' %}
 xmindImageSrc: '{{ xmind_image_src|escapejs }}',
 {% endif %}
