--- a/seahub/templates/file_view_react.html
+++ b/seahub/templates/file_view_react.html
@@ -13,7 +13,9 @@ window.app.pageOptions = {
 
   canGenerateShareLink: {% if user.permissions.can_generate_share_link %} true {% else %} false {% endif %},
   canSendShareLinkEmail: {% if user.permissions.can_send_share_link_mail %} true {% else %} false {% endif %},
+  shareLinkForceUsePassword: {% if share_link_force_use_password %} true {% else %} false {% endif %},
   shareLinkPasswordMinLength: {{ share_link_password_min_length }},
+  shareLinkPasswordStrengthLevel: {{ share_link_password_strength_level }},
   shareLinkExpireDaysDefault: {{ share_link_expire_days_default }},
   shareLinkExpireDaysMin: {{ share_link_expire_days_min }},
   shareLinkExpireDaysMax: {{ share_link_expire_days_max }},
