--- a/seahub/templates/markdown_file_view_react.html
+++ b/seahub/templates/markdown_file_view_react.html
@@ -47,7 +47,9 @@
                   hasDraft: '{{ has_draft }}' === 'True',
                   draftFilePath: '{{ draft_file_path }}',
                   draftOriginFilePath: '{{ draft_origin_file_path }}',
+		  shareLinkForceUsePassword: {% if share_link_force_use_password %} true {% else %} false {% endif %},
                   shareLinkPasswordMinLength: {{ share_link_password_min_length }},
+                  shareLinkPasswordStrengthLevel: {{ share_link_password_strength_level }},
                   shareLinkExpireDaysDefault: {{ share_link_expire_days_default }},
                   shareLinkExpireDaysMin: {{ share_link_expire_days_min }},
                   shareLinkExpireDaysMax: {{ share_link_expire_days_max }},
