upgrade django to 3.2

--- a/seahub/institutions/templates/institutions/user_info.html
+++ b/seahub/institutions/templates/institutions/user_info.html
@@ -1,6 +1,6 @@
 {% extends "institutions/base.html" %}
 {% load i18n avatar_tags seahub_tags %}
-{% load staticfiles %}
+{% load static %}
 
 {% block right_panel %}
 <p class="path-bar">
