--- a/seahub/templates/base_for_react.html
+++ b/seahub/templates/base_for_react.html
@@ -1,4 +1,4 @@
-{% load seahub_tags i18n staticfiles %}
+{% load seahub_tags i18n static %}
 {% load render_bundle from webpack_loader %}
 
 <!DOCTYPE html>
