add permission control

--- a/media/css/seahub_react.css
+++ b/media/css/seahub_react.css
@@ -146,6 +146,11 @@ a:hover { color:#eb8205; }
   margin: 0;
 }
 
+.sf-link {
+    color: #ee8204 !important;
+    cursor: pointer;
+}
+
 .vh {
     visibility: hidden;
 }
