--- a/frontend/src/css/dirents-menu.css
+++ b/frontend/src/css/dirents-menu.css
@@ -7,6 +7,7 @@
   border-bottom-left-radius: 0;
   border-top-left-radius: 0;
   width: 46px;
+  height: 30px;
 }
 .dirents-more-menu:hover {
   background-color: #fff;
