--- a/media/css/seahub_react.css
+++ b/media/css/seahub_react.css
@@ -1048,12 +1048,11 @@ a.table-sort-op {
     margin-left: 15px;
   }
 }
-a.table-sort-op:hover,
-a.table-sort-op:focus {
+a.table-sort-op:hover {
   outline: none;
   text-decoration: none;
 }
-  
+
 /* dropdown-menu style */
 .dropdown-menu {
     min-width: 8rem;
