--- a/frontend/src/css/system-notification.css
+++ b/frontend/src/css/system-notification.css
@@ -1,22 +1,15 @@
 #info-bar {
-    color: #1f0600;
-    padding: 4px 25px 4px 10px;
-    background: #fddaa4;
-    position: relative;
+  color: #1f0600;
+  padding: 4px 10px;
+  background: #fddaa4;
 }
 #info-bar .close {
-    position: absolute;
-    right: 5px;
-    top: 5px;
-    font-size: 16px;
-    line-height: 1;
-    color: #888;
-    cursor: pointer;
-}
-#info-bar-info {
-    margin: 0;
+  font-size: 16px;
+  line-height: 1;
+  color: #888;
+  cursor: pointer;
 }
 #info-bar-info a {
-    color: #a68558;
-    text-decoration: underline;
+  color: #a68558;
+  text-decoration: underline;
 }
