Add SITE_DESCRIPTION config variable
Which gets used in the html header <meta name="description" ... /> tag.

--- a/seahub/templates/base_for_react.html
+++ b/seahub/templates/base_for_react.html
@@ -7,6 +7,7 @@
 <title>{% block sub_title %}{% endblock %}{{ site_title }}</title>
 <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
 <meta name="keywords" content="{% trans "File Collaboration Team Organization" %}" />
+{% if site_description != '' %}<meta name="description" content="{{ site_description }}" />{% endif %}
 {% block viewport %}
 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 {% endblock %}
