Use comma as html meta keyword separator
As per
https://developer.mozilla.org/en-US/docs/Web/HTML/Element/meta/name this
it the correct character to separate the keywords listed there.

I also updated some of the translation strings (but not those with
non-latin character sets, sorry).

--- a/seahub/templates/base.html
+++ b/seahub/templates/base.html
@@ -5,7 +5,7 @@
 <head>
 <title>{% block sub_title %}{% endblock %}{{ site_title }}</title>
 <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
-<meta name="keywords" content="{% trans "File Collaboration Team Organization" %}" />
+<meta name="keywords" content="{% trans "File, Collaboration, Team, Organization" %}" />
 {% block viewport %}
 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 {% endblock %}
