remove escapejs when show title on wiki page

--- a/seahub/templates/wiki/wiki.html
+++ b/seahub/templates/wiki/wiki.html
@@ -4,7 +4,7 @@
 {% render_bundle 'wiki' 'css' %}
 {% endblock %}
 
-{% block sub_title %} {{filename|escapejs}} - {% endblock %}
+{% block sub_title %} {{filename}} - {% endblock %}
 
 {% block extra_script %}
 <script type="text/javascript">
