can change name when anonymous user edit file

--- a/seahub/templates/view_file_onlyoffice.html
+++ b/seahub/templates/view_file_onlyoffice.html
@@ -44,11 +44,19 @@ html, body { padding:0; margin:0; height:100%; }
             "mode": {% if can_edit %}"edit"{% else %}"view"{% endif %},
             "customization": {
                 "forcesave": {% if onlyoffice_force_save %}true{% else %}false{% endif %},
+                {% if not request.user.is_authenticated %}
+                "anonymous": {
+                    "request": true,
+                    "label": "Guest"
+                },
+                {% endif %}
             },
+            {% if request.user.is_authenticated %}
             "user": {
                 "id": "{{ username|escapejs }}",
                 "name": "{{ username|email2nickname|escapejs }}"
             }
+            {% endif %}
         }
     };
     var docEditor = new DocsAPI.DocEditor("placeholder", config);
