--- a/frontend/src/css/manage-members-dialog.css
+++ b/frontend/src/css/manage-members-dialog.css
@@ -34,6 +34,8 @@
 }
 
 .group-manage-members-dialog .search-group-members-btn {
+  font-size: 14px;
+  font-weight: normal;
   background: #f1f1f1;
   margin: 12px 0 0;
 }
