--- a/seahub/templates/shared_link_email.html
+++ b/seahub/templates/shared_link_email.html
@@ -13,6 +13,10 @@
 <a href="{{ file_shared_link }}">{{ file_shared_link }}</a>
 </p>
 
+{% if password %}
+<p>{% trans "Password:"%} {{ password }}</p>
+{% endif %}
+
 {% if extra_msg %}
 <p>" {{ extra_msg }} "</p>
 {% endif %}
